65130500101-[INT222]-fix_UAT